# qiclib

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pylintrc  README.md  build_protos.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py
docs/: Makefile  conf.py  experiments.rst  getting_started.rst  index.rst  qi_code.rst  reference.rst  serve-doc.py  troubleshooting.rst
docs/_templates/: package.rst_t
docs/qiclib/: .gitignore
examples/: digital_trigger.ipynb
examples/pulses/: pulse_player_examples.ipynb
examples/qiskit/: Running_Qiskit_circuits_on_QiController_tutorial.ipynb
examples/qiskit/2-qubit-quantum-algorithms/: 2-qubit-Deutsch Algorithm.ipynb  2-qubit-Gover's-Algorithm.ipynb  Phase Kickback.ipynb  Quantum Entanglement.ipynb  Quantum_Key_Distribution_protocol.ipynb
examples/resonators/: Resonators_Test_qiclib_2024_04_29.ipynb
examples/rfdc/: interfacing_with_the_directrf.ipynb  interfacing_with_the_rfdc.ipynb
src/qiclib/: __init__.py  state_estimation.py
src/qiclib/code/: __init__.py  qi_code_test.ipynb  qi_command.py  qi_dataflow.py  qi_jobs.py  qi_prog_builder.py  qi_pulse.py  qi_result.py  qi_sample.py  qi_seq_instructions.py  qi_sequencer.py  qi_simulate.py  qi_types.py  qi_util.py  qi_var_definitions.py  qi_visitor.py
src/qiclib/code/analysis/: __init__.py  qi_insert_mem_parameters.py
src/qiclib/coding/: sequencercode.py
src/qiclib/experiment/: SecondToneSweepR5.py  __init__.py  active_cooling_t1.py  active_reset_t1.py  autoconf_readout.py  base.py  benchmarking.py  collection.py  correlation_calibration.py  correlation_conv_all.py  g1_correlation.py  g1_correlation_conv.py  g1_meas_setuptest.py  g2_correlation.py  g2_correlation_conv.py  gx_correlation_base.py  inverted_t1.py  iq_clouds.py  iq_clouds_multi_qfb.py  iq_clouds_qfb.py  iq_clouds_qfb_decay.py  iq_clouds_ramsey.py  iq_clouds_ringup.py  multi_pi.py  multi_pi_t1.py  qkit_virtual_awg.py  quantum_jumps.py  quantum_jumps_long.py  qubit_times.py  qubit_times_qkit.py  rabi.py  rabi_R5PG.py  rabi_drag.py  rabi_short.py  ramsey.py  readout.py  readout_spectr.py  resonator_ringup.py  resonator_ringup_window.py  single_pulse.py  (+4 more)
src/qiclib/experiment/qicode/: base.py  collection.py  data_handler.py  data_provider.py  fit_utils.py  init_readout.py  qubit_times.py  qubit_times_qkit.py
src/qiclib/experiment/rtos_tasks/: __init__.py  active_cooling.c  average_trace.c  base_experiment_task.c  interleaved.c  interleaved_multi.c  iq_clouds.c  optimize_rec_offset.c  quantum_jumps.c  quantum_jumps_multi.c  quantum_jumps_new.c  qubit_freq_sweep_task.c  rabi_r5.c  trace_fft.c
src/qiclib/experiment/rtos_tasks/correlation/: calibration.c  correlation_conv.c  g1_correlation.c  g1_correlation_conv.c  g1_meas_setuptest.c  g2_correlation.c  g2_correlation_conv.c
src/qiclib/experiment/rtos_tasks/qicode/: averaging.c  iq_collect.c  state_collect.c  state_count.c  timetrace.c
src/qiclib/experiment/rtos_tasks/test/: copy_test.c  empty.c  shift_test.c  stream_test.c  test_databox.c  time_test_code.c  timing_test.c  timing_test_axi.c  timing_test_single.c
src/qiclib/hardware/: __init__.py  controller.py  digital_trigger.py  direct_rf.py  direct_rf_addon.py  pimc.py  platform_component.py  pulse_player.py  pulsegen.py  recording.py  rfdc.py  sequencer.py  servicehub.py  storage.py  taskrunner.py  unitcell.py  vna.py
src/qiclib/measurement/: iq_fit.py  iq_plot.py  measure_iq.py  resonators.py
tests/: test_calibrate_electrical_delay.py  test_data_handlers.py  test_experiments.py  test_iq_fit.py  test_qi_array_types.py  test_qi_insert_mem_parameters.py  test_qi_jobs.py  test_qi_prog_builder.py  test_qi_pulse.py  test_qi_pulse_amplitude_warning.py  test_qi_sample.py  test_qi_seq_instructions.py  test_qi_sequencer.py  test_qi_types.py  test_qi_util.py  test_qi_var_definitions.py  test_qi_visitor.py  test_static_variables.py  test_version.py  test_while_integration.py  test_while_loop.py
tests/data/: amplitude_data.npy
tests/mocks/: __init__.py  digital_trigger.py  pimc.py  pulse_gen.py  recording.py  rfdc.py  sequencer.py  servicehub_control.py  storage.py  taskrunner.py  unit_cell.py
tests/test_files/: properties_error.json  properties_ok.json
