# Copyright © 2017-2023 Quantum Interface (quantuminterface@ipe.kit.edu)
# Lukas Scheller, IPE, Karlsruhe Institute of Technology
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = 3.6
ignore_missing_imports = true
no_implicit_optional = true
# The following error codes are disabled because fixing them is
# a lot of work. They should be re-enabled incrementally.
disable_error_code = [
    "arg-type",
    "attr-defined",
    "misc",
    "assignment",
    "union-attr",
]

[[tool.mypy.overrides]]
module = "qiclib.packages.*"
ignore_errors = true

[tool.coverage.run]
branch = true
omit = ["*/packages/grpc/*"]
source = ["src"]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_empty = true
