# Copyright © 2017-2023 Quantum Interface (quantuminterface@ipe.kit.edu)
# Lukas Scheller, IPE, Karlsruhe Institute of Technology
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4", "grpcio-tools==1.66.1"]
build-backend = "hatchling.build"

[project]
name = "qiclib"
authors = [
    { name = "Quantum Interface", email = "quantuminterface@ipe.kit.edu" },
]
description = "Library to connect to Quantum Interface's QiController."
readme = "README.md"
license = { file = "COPYING" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "ipywidgets>=8.1",
    "wrapt>=1.16",
    # `grpcio`, `grpcio-tools` and `protobuf` should always get exact version
    # numbers to prevent mismatches between the generated protobuf version
    # and runtime protobuf version
    "grpcio==1.66.1",
    "protobuf==5.27.2",
    "lmfit>=1.3",
    "tqdm>=4.67.1",
]
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/quantuminterface/qiclib"

[project.optional-dependencies]
qiskit = ["qiskit>=1.2.1", "tzlocal>=5.2", "qiskit-aer>=0.15.1"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
no_implicit_optional = true
# The following error codes are disabled because fixing them is
# a lot of work. They should be re-enabled incrementally.
disable_error_code = [
    "arg-type",
    "attr-defined",
    "misc",
    "assignment",
    "union-attr",
]

[[tool.mypy.overrides]]
module = "qiclib.packages.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "qiclib.experiment.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "qiclib.measurement.*"
ignore_errors = true

[tool.coverage.run]
branch = true
omit = ["*/packages/grpc/*"]
source = ["src"]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_empty = true

[tool.hatch.build.hooks.custom]
path = 'build_protos.py'
# protos_root points to the directory that
# a) The `ipe_servicehub_protos` submodule can be found
# b) The `proto_files.txt` file can be found that lists installable proto files
# c) The generated protobuf files should be installed to
protos_root = "src/qiclib/packages/grpc"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/qiclib/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev", "jupyter"]

[dependency-groups]
dev = [
    "hatch>=1.13.0",
    "mypy>=1.13.0",
    "pre-commit>=3.5.0",
    "pylint-gitlab>=2.0.1",
    "pylint>=3.2.7",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "sphinx>=7.1.2",
    "ruff>=0.8.3",
    "furo>=2024.8.6",
    "livereload>=2.7.1",
]
jupyter = ["jupyterlab>=4.3.3"]
