# Copyright © 2017-2023 Quantum Interface (quantuminterface@ipe.kit.edu)
# Lukas Scheller, IPE, Karlsruhe Institute of Technology
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[metadata]
name = qiclib
version = 1.1.1
author = Quantum Interface
author_email = quantuminterface@ipe.kit.edu
description = Library to connect to Quantum Interface's QiController.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quantuminterface/qiclib
classifiers=
        Development Status :: 3 - Alpha
        Programming Language :: Python :: 3
        License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
        Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = find:
package_dir =
    =src
install_requires =
    numpy>=1.19
    scipy>=1.5
    matplotlib>=3.3
    ipywidgets>=7.7
    typing>=3.7
    wrapt>=1.14
    gitpython>=3.1
    protobuf>=3.19
    grpcio-tools>=1.48
    grpcio>=1.48

include_package_data = True

[options.packages.find]
where = src

[options.package_data]
qiclib.experiment.rtos_tasks = *.c, **/*.c
qiclib = py.typed
